# macdefaultbrowsy

./: DEVELOPMENT.md  README.md  llms.txt  package.toml  pyinstaller.spec  pyproject-OLD.toml  pyproject.toml
.github/workflows/: push.yml  release.yml
.specstory/history/: 2025-06-28_00-12-migrate-important-settings-to-package-toml.md  2025-06-28_00-12-untitled.md  2025-06-28_00-12Z-migrate-important-settings-to-package-toml.md  2025-06-28_09-24-difference-between-get-available-browsers-and-list-browsers.md  2025-06-28_09-24Z-difference-between-get-available-browsers-and-list-browsers.md
macdefaultbrowsy/: __main__.py  macdefaultbrowsy.py
scripts/: all.sh  build-binary.sh  build.sh  install.sh  release.sh  test.sh  validate.sh
src/macdefaultbrowsy/: __init__.py  __main__.py  launch_services.py  macdefaultbrowsy.py  py.typed
tests/: test_browser_manager.py  test_cli.py  test_dialog_automation.py  test_launch_services.py  test_package.py
